--- a/src/Components/Details/Form.css
+++ b/src/Components/Details/Form.css
@@ -33,11 +33,13 @@ button.btn-close{
 .css-2y464i-MuiInputBase-root-MuiFilledInput-root{
     border-radius: 10px!important;
     height: 55px!important;
-    border: 1px solid rgba(128, 128, 128, 0.123)!important;
+    border: 1px solid #e9ecef!important;
+    background-color: #f8f9fa!important;
 }
 .css-leqjib-MuiInputBase-root-MuiFilledInput-root{
     border-radius: 10px!important;
     border: 1px solid rgba(128, 128, 128, 0.123)!important;
+    background-color: #f8f9fa!important;
 }
 .css-1jg2gny{
     border-bottom-left-radius: 10px!important;
@@ -73,6 +75,9 @@ label{
     font-family: sans-serif;
     font-size: 13.5px;
 }
+.css-1mog9k0-MuiFormLabel-root-MuiInputLabel-root{
+    top: 4px!important;
+}
 .buttonsubmit{
     margin-top: 1rem;
     text-align: center;
@@ -83,6 +88,7 @@ label{
   border-radius: 10px;
   background: #06aed5;
   color: white;
+  text-transform: none!important;
   font-family: sans-serif;
   box-shadow: rgba(60, 64, 67, 0.3) 0px 1px 2px 0px, rgba(60, 64, 67, 0.15) 0px 2px 6px 2px;
 }
