--- a/src/Components/Details/calendarTimeslot.css
+++ b/src/Components/Details/calendarTimeslot.css
@@ -8,6 +8,7 @@
     height: 360px;
     width: 490px;
     border: 1px solid #adb5bd2f;
+    box-shadow: rgba(99, 99, 99, 0.2) 0px 2px 8px 0px;
 }
 .react-calendar:hover{
     box-shadow: rgba(100, 100, 111, 0.2) 0px 7px 29px 0px!important;
@@ -17,8 +18,9 @@
     position: relative;
     height: 360px;
     width: 490px;
-    border: 1px solid rgba(175, 170, 170, 0.671);
+    border: 1px solid rgba(175, 170, 170, 0.384);
    border-radius: 15px;
+   box-shadow: rgba(99, 99, 99, 0.2) 0px 2px 8px 0px;
 }
 .times:hover{
     box-shadow: rgba(100, 100, 111, 0.2) 0px 7px 29px 0px!important;
@@ -72,22 +74,21 @@
   }
   .react-calendar__navigation {
     display: flex;
-    height: 50px;
-    padding: 1.2rem 5rem;
+    padding: 1.5rem 5rem 0.5rem 5rem;
     margin-bottom: 1em;
   }
   .react-calendar__navigation button {
     min-width: 50px;
     /* background: none; */
   }
-  /* .react-calendar__navigation button:enabled:hover,
+   .react-calendar__navigation button:enabled:hover,
   .react-calendar__navigation button:enabled:focus {
     background-color: #e6e6e6;
-  } */
-  .react-calendar__navigation button[disabled] {
+  } 
+  /* .react-calendar__navigation button[disabled] {
     background-color: #f0f0f0;
     
-  }
+  } */
   .react-calendar__month-view__weekdays {
     text-align: center;
     text-transform: uppercase;
@@ -107,7 +108,7 @@
   }
   .react-calendar__month-view__days__day--weekend {
     /* color: #d10000; */
-    color: black;
+    /* color: black; */
   }
   .react-calendar__month-view__days{
     line-height: 16.1px;
@@ -130,8 +131,7 @@
     font-size: 14.3px;
   }
   .react-calendar__tile:disabled {
-    background-color: #f0f0f0;
-    border-radius: 5px;
+    background: none;
   }
   .react-calendar__tile:enabled:hover,
   .react-calendar__tile:enabled:focus {
@@ -143,20 +143,20 @@
     background-color: #6f48eb;
     border-radius: 5px;
   }
-  .react-calendar__tile--now:enabled:hover,
+  /* .react-calendar__tile--now:enabled:hover,
   .react-calendar__tile--now:enabled:focus {
     background: #ffffa9;
     border-radius: 5px;
-  }
+  } */
   .react-calendar__tile--hasActive {
     background: #76baff;
     border-radius: 5px;
   }
-  .react-calendar__tile--hasActive:enabled:hover,
+  /* .react-calendar__tile--hasActive:enabled:hover,
   .react-calendar__tile--hasActive:enabled:focus {
     background: #a9d4ff;
     border-radius: 5px;
-  }
+  } */
   .react-calendar__tile--active {
     background: #19A7CE;
     color: white;
@@ -167,53 +167,79 @@
     background: #1087ff;
     border-radius: 5px;
   }
-  .react-calendar--selectRange .react-calendar__tile--hover {
+  /* .react-calendar--selectRange .react-calendar__tile--hover {
     background-color: #e6e6e6;
-  }
+  } */
   
   .date-div{
     text-align: center;
-    padding-top: 1.5rem;
+    display: flex;
+    justify-content: space-between;
+    flex-wrap: wrap;
+    /* background: aliceblue; */
+    border-top-left-radius: 15px;
+    border-top-right-radius: 15px;
   }
-  .date-div:hover{
-    background: rgba(128, 128, 128, 0.062)!important;
+  
+.backbtn
+{
+    padding: 5px 8px!important;
+    border: 1px solid rgba(16, 154, 233, 0.404)!important;
+    border-radius: 50%!important;
+    /* background-color: rgba(168, 163, 163, 0.15)!important; */
+    margin-top: 1rem;
+    margin-bottom: 1.5rem;
+    margin-left: 2.5rem!important;
+    background: rgba(128, 128, 128, 0.116)!important;
+}
+.backbtn:hover{
+  background: rgba(153, 151, 151, 0.37)!important;
+}
+.backbtn svg{
+    font-size: 18px!important;
+    color: #00a8e8!important;
+    margin: 3px 0 4px 0!important;
+    background: none!important;
+    font-weight: bold!important;
 }
 .date-p{
     margin-bottom: 0;
-    padding-bottom: 1.5rem;
+    padding-top: 1.7rem;
     font-family: sans-serif;
-    color: #00a8e8;
+    /* color: #00a8e8; */
+    color: #57cc99;
     font-size: 17px;
     font-weight: bold;
+    text-align: right;
+    padding-right: 5rem;
 }
   .timeslot-div{
     display: flex;
     flex-wrap: wrap;
     justify-content: center;
     justify-content: space-around;
-    padding: 0.7rem 2rem;
-    border-top: 1px solid rgba(175, 170, 170, 0.671);;
-    border-bottom: 1px solid rgba(175, 170, 170, 0.671);
-    max-height: 160px;
+    padding: 0.5rem 2rem;
+    border-top: 1px solid rgba(175, 170, 170, 0.322);
+    border-bottom:  1px solid rgba(175, 170, 170, 0.322);
+    max-height: 133px;
     overflow: auto;
-    
+    background: rgba(128, 128, 128, 0.116);
   }
   .space{
-    margin: 1rem 0.5rem 0.5rem 0.5rem;
+    margin: 0.5rem 0.5rem 0.5rem 0.5rem;
    
   }
   .time-btn{
     padding: 8px 20px;
     border-radius: 8px;
-    border: 1px solid #118ab25d;
-    background: rgba(128, 128, 128, 0.116);
+    border: 1px solid #90e0ef;
+    background: white;
   }
   .time-btn:hover{
-    background-color: #118ab29d!important;
-    color: white!important;
+    background-color: #90e0ef!important;
 }
-.timeslot-div::-webkit-scrollbar{
-    width: 8px;
+ .timeslot-div::-webkit-scrollbar{
+    width: 7px;
 }
 .timeslot-div::-webkit-scrollbar-track {
     border-radius: 5px;
@@ -221,16 +247,23 @@
 }
 
 .timeslot-div::-webkit-scrollbar-thumb {
-    background-color: #00bbf975;
+    background-color: rgba(128, 128, 128, 0.24);
     border-radius: 10px; 
-} 
+}  
 .book-div{
-    padding: 1rem;
+    padding: 1.2rem;
+    text-align: center;
 }
 .bookbtn-div{
-    text-align: right;
-    margin-top: 1rem;
+    text-align: center;
+    margin-top: 1.3rem;
     margin-right: 1rem;
+   
+}
+.set-p{
+  color: #57cc99;
+  font-weight: bold;
+  font-family: sans-serif;
 }
 .bookbtn{
     padding: 10px 18px!important;
@@ -241,8 +274,9 @@
     font-weight: 550!important;
     box-shadow: rgba(60, 64, 67, 0.3) 0px 1px 2px 0px, rgba(60, 64, 67, 0.15) 0px 2px 6px 2px!important;
     text-transform: none!important;
+
 }
 .bookbtn:hover{
     background: #5bc0eb!important;
-    color: black!important;
+    color: rgba(41, 40, 40, 0.616)!important;
 }
