--- a/src/Components/Details/Form.css
+++ b/src/Components/Details/Form.css
@@ -85,7 +85,7 @@ label{
 .submit-btn{
   border: none;
   padding: 10px 18px;
-  border-radius: 10px;
+  border-radius: 10px!important;
   background: #06aed5;
   color: white;
   text-transform: none!important;
