--- a/src/Components/Details/calendarTimeslot.css
+++ b/src/Components/Details/calendarTimeslot.css
@@ -84,7 +84,7 @@
   }
    .react-calendar__navigation button:enabled:hover,
   .react-calendar__navigation button:enabled:focus {
-    background-color: #c4bebea8;
+    background-color: #c4bebe60;
     border-radius: 10px;
   } 
   /* .react-calendar__navigation button[disabled] {
@@ -182,13 +182,13 @@
   .date-div{
     text-align: center;
     display: flex;
-    justify-content: space-between;
     flex-wrap: wrap;
     /* background: aliceblue; */
     border-top-left-radius: 15px;
     border-top-right-radius: 15px;
     background: #f8f9fa;
     box-shadow: rgba(0, 0, 0, 0.05) 0px 0px 0px 1px;
+    padding-bottom: 0.8rem;
   }
   
 .backbtn
@@ -198,8 +198,7 @@
     border-radius: 10px!important; 
     /* background-color: rgba(168, 163, 163, 0.15)!important; */
     margin-top: 1.5rem;
-    margin-bottom: 1.5rem;
-    margin-left: 3.2rem!important;
+    margin-left: 1.3rem!important;
    background: white!important;
    box-shadow: rgba(99, 99, 99, 0.2) 0px 1px 1px 0px!important;
 }
@@ -212,27 +211,7 @@
     background: none!important;
     /* font-weight: bolder!important; */
 }
-.backbtn .tooltiptext {
-  visibility: hidden;
-  width: 75px;
-  /* background-color: skyblue; */
-  color: black;
-  text-align: center;
-  border-radius: 6px;
-  padding: 5px 0;
-  font-size: 15px;
-  /* Position the tooltip */
-  position: absolute;
-  z-index: 1;
-  top: 25px;
-  right: 68%;
-  font-size: 13px;
-}
 
-.backbtn:hover .tooltiptext {
-  visibility: visible;
-  
-}
 .date-p{
     margin-bottom: 0;
     padding-top: 2rem;
@@ -242,7 +221,7 @@
     color: #00bbf9;
     font-size: 17px;
     font-weight: bold;
-    padding-right: 9rem;
+    padding-left: 6.5rem;
 }
   .timeslot-div{
     display: flex;
@@ -254,7 +233,7 @@
     border-bottom:  1px solid rgba(175, 170, 170, 0.322); */
     max-height: 135px;
     overflow: auto;
-    box-shadow: rgba(0, 0, 0, 0.1) 0px 4px 4px -1px, rgba(0, 0, 0, 0.06) 0px 2px 4px -1px;
+    border-bottom: 1px solid gainsboro;
   }
   .space{
     margin: 0.5rem 0.5rem 0.5rem 0.5rem;
@@ -282,7 +261,7 @@
     border-radius: 10px; 
 }  
 .book-div{
-    padding: 1.2rem;
+    padding: 0.5rem;
     text-align: center;
 }
 .bookbtn-div{
@@ -294,8 +273,10 @@
 .set-p{
   color: #00afb9;
   font-family: sans-serif;
-  padding-top: 5px;
   font-size: 15px!important;
+  margin-left: 5rem;
+  padding-top: 5px;
+  margin: auto;
 }
 .bookbtn{
     padding: 10px 18px!important;
