--- a/src/Components/Details/calendarTimeslot.css
+++ b/src/Components/Details/calendarTimeslot.css
@@ -129,6 +129,7 @@
   .react-calendar__decade-view .react-calendar__tile,
   .react-calendar__century-view .react-calendar__tile {
     padding: 1em 0;
+    display: none;
   }
   .react-calendar__tile {
     max-width: 100%;
@@ -194,19 +195,22 @@
 .backbtn
 {
     padding: 4px 12px!important;
-    border: 1px solid rgba(16, 154, 233, 0.185)!important;
+    /* border: 1px solid rgba(16, 154, 233, 0.185)!important; */
+    border: none!important;
     border-radius: 10px!important; 
     /* background-color: rgba(168, 163, 163, 0.15)!important; */
     margin-top: 1.5rem;
     margin-left: 1.3rem!important;
-   background: white!important;
-   box-shadow: rgba(99, 99, 99, 0.2) 0px 1px 1px 0px!important;
+   background: none!important;
+   /* box-shadow: rgba(99, 99, 99, 0.2) 0px 1px 1px 0px!important; */
 }
-.backbtn:hover{
-  background: #e2e4e765!important;
+.backbtn:hover.backbtn svg{
+  /* background: #e2e4e765!important; */
+  color: blue!important;
+  font-weight: bolder!important;
 }
 .backbtn svg{
-    font-size: 17px!important;
+    font-size: 18px!important;
     margin: 3px 0 4px 0!important;
     background: none!important;
     /* font-weight: bolder!important; */
@@ -228,15 +232,15 @@
     flex-wrap: wrap;
     justify-content: center;
     justify-content: space-around;
-    padding: 0.7rem 2.5rem;
+    padding: 0.5rem 2.5rem;
     /* border-top: 1px solid rgba(175, 170, 170, 0.322);
     border-bottom:  1px solid rgba(175, 170, 170, 0.322); */
-    max-height: 135px;
+    max-height: 175px;
     overflow: auto;
-    border-bottom: 1px solid gainsboro;
+    /* border-bottom: 1px solid gainsboro; */
   }
   .space{
-    margin: 0.5rem 0.5rem 0.5rem 0.5rem;
+    margin: 0.5rem 0.5rem 0.2rem 0.5rem;
    
   }
   .time-btn{
@@ -261,12 +265,11 @@
     border-radius: 10px; 
 }  
 .book-div{
-    padding: 0.5rem;
     text-align: center;
 }
 .bookbtn-div{
     text-align: center;
-    margin-top: 1.2rem;
+    margin-top: 0.8rem;
     margin-right: 1rem;
    
 }
