--- a/src/Components/Details/Form.css
+++ b/src/Components/Details/Form.css
@@ -144,3 +144,29 @@ label{
     justify-content: center!important;
     padding: 8px 0!important;
 } */
+
+
+
+
+@media only screen and (max-width: 975px){
+    .form-col{
+        padding-left: 0!important;
+        padding-right: 0!important;
+    }
+}
+@media only screen and (max-width: 630px){
+    .modal-90w{
+        max-width: 70%!important;
+        margin: 1rem auto!important;
+    }
+}
+@media only screen and (max-width: 500px){
+    .modal-90w{
+        max-width: 75%!important;
+    }
+}
+@media only screen and (max-width: 400px){
+    .modal-90w{
+        max-width: 92%!important;
+    }
+}
