--- a/src/Components/Details/calendarTimeslot.css
+++ b/src/Components/Details/calendarTimeslot.css
@@ -204,7 +204,7 @@
     border: none!important;
     border-radius: 10px!important; 
     margin-top: 1.5rem!important;
-    margin-left: 1.3rem!important;
+    margin-left: 1rem!important;
    background: none!important;
    position: absolute!important; 
    
@@ -214,7 +214,7 @@
   color: rgba(128, 128, 128, 0.788)!important;
   font-weight: bolder!important;
   /* transition-timing-function: ease-in!important; */
-  transition: 0.25s!important;
+  transition: 1s!important;
   transform: translate(-.25rem)!important;
   stroke-width: 1.5!important;
 }
@@ -234,8 +234,10 @@
     /* color: #57cc99; */
     color: #00bbf9;
     font-size: 17px;
-    font-weight: bold;
-   
+    /* font-weight: bold; */
+}
+.date-p svg{
+  margin-bottom: 4.5px!important;
 }
   .timeslot-div{
     display: flex;
@@ -245,7 +247,7 @@
     padding: 0.5rem 2.5rem;
     /* border-top: 1px solid rgba(175, 170, 170, 0.322);
     border-bottom:  1px solid rgba(175, 170, 170, 0.322); */
-    max-height: 175px;
+    max-height: 174px;
     overflow: auto;
     /* border-bottom: 1px solid gainsboro; */
   }
@@ -258,14 +260,15 @@
     border-radius: 8px;
     border: 1px solid #90e0ef;
     background: white;
+    box-shadow: rgba(0, 0, 0, 0.16) 0px 1px 4px;
   }
   .time-btn:hover{
     background-color: #90e0ef!important;
 }
 .time-btn:focus{
   /* background-color: #3a86ff!important; */
-   background-color: #00afb9!important; 
-  /* background-color: #5fa8d3!important; */
+   /* background-color: #00afb9!important;  */
+   background-color: #5fa8d3!important; 
   /* background-color: #2ec4b6!important;  */
   color: white!important;
   border: none!important;
@@ -292,13 +295,17 @@
    
 }
 .set-p{
-  color: #00afb9;
+  color: #47B5FF;
   font-family: sans-serif;
   font-size: 15px!important;
   margin-left: 5rem;
   padding-top: 5px;
   text-align: center;
   margin: auto;
+}
+.set-p svg{
+  margin-bottom: 3.5px!important;
+  font-size: 16px!important;
 }
 .bookbtn{
     padding: 10px 18px!important;
