--- a/src/Components/Details/Details.css
+++ b/src/Components/Details/Details.css
@@ -34,21 +34,21 @@
 .css-13cymwt-control{
     border-color: #e9ecef!important;
     background: #e9ecefa2!important; 
-    border-radius: 18px!important;
+    border-radius: 10px!important;
    
 }
 .css-13cymwt-control:hover
 {
     background: #e9ecefcc!important; 
 }
-.css-1jqq78o-placeholder{
+/* .css-1jqq78o-placeholder{
     font-size: 14px!important;
     font-family: sans-serif!important;
     font-weight: bold!important;
-}
+} */
 .css-1dimb5e-singleValue{
     color: #6c757d!important;
-    font-size: 13.2px!important;
+    font-size: 11.5px!important;
     font-family: sans-serif!important;
 }
 .css-1nmdiq5-menu{
@@ -151,11 +151,14 @@
     }
     
 }
-/* @media only screen and (max-width: 975px){
-    .detail-left{
-        padding-left: 1rem!important;
+ @media only screen and (max-width: 915px){
+    .css-1dimb5e-singleValue{
+       font-size: 10.5px!important;
     }
-} */
+    .css-b62m3t-container{
+        width: 80%!important;
+    }
+} 
 @media only screen and (max-width: 895px){
     .heading h4{
         font-size: 1.2rem!important;
@@ -187,6 +190,16 @@
         margin-left: 2rem!important;
     }
 }
+@media only screen and (max-width: 750px){
+    .css-b62m3t-container{
+        width: 90%!important;
+    }
+} 
+@media only screen and (max-width: 670px){
+    .css-b62m3t-container{
+        width: 98%!important;
+    }
+} 
 @media only screen and (max-width: 655px){
     .heading h4{
         font-size: 0.9rem!important;
@@ -247,6 +260,12 @@
     .client-detail{
         padding-bottom: 1rem!important;
     }
+    .css-b62m3t-container{
+        width: 80%!important;
+    }
+    .css-1dimb5e-singleValue{
+        font-size: 12px!important;
+     }
 }
 @media only screen and (max-width: 550px){
     .detail-left{
@@ -272,6 +291,9 @@
     .css-b62m3t-container{
         width: 90%!important;
     }
+    .css-1dimb5e-singleValue{
+        font-size: 11px!important;
+     }
 }
 @media only screen and (max-width: 460px){
     .phone{
